@@ -1,3 +1,4 @@
+ Tue Aug 26 2014 - 'n'/'N' now work when not right after search
  Sun Aug 24 2014 - store commands file in %prefix%/share/vit/
  Wed Jul 30 2014 - update documentation URLs
  Fri Jun 27 2014 - add prompt history scrolling with arrows (VT-32, VT-36)
